[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "swarm-checkin-exporter"
version = "0.1.0"
description = "Export your complete Swarm check-in history to JSON and CSV"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "playwright>=1.45,<2",
]

[project.scripts]
swarm-exporter = "swarm_exporter_cli:main"

[tool.setuptools]
py-modules = ["swarm_exporter", "swarm_exporter_cli"]
